# bolt

./: CONTRIBUTING.md  README.md
bolt/benchmarks/: QueryBenchmarkBase.cpp
bolt/common/base/: SpillConfig.cpp  SpillConfig.h
bolt/common/memory/: StreamArena.cpp  StreamArena.h
bolt/connectors/: ConnectorNames.h
bolt/connectors/arrow/: ArrowMemoryConnector.h
bolt/connectors/arrow/tests/: ArrowMemoryConnectorTest.cpp
bolt/connectors/fuzzer/: FuzzerConnector.h
bolt/connectors/fuzzer/tests/: FuzzerConnectorTestBase.h
bolt/connectors/hive/: HiveConnector.h
bolt/connectors/tpch/: TpchConnector.h
bolt/connectors/tpch/tests/: SpeedTest.cpp  TpchConnectorTest.cpp
bolt/core/: QueryConfig.h
bolt/dwio/common/: DirectBufferedInput.cpp  DirectBufferedInput.h
bolt/dwio/orc/test/: OrcTpchTest.cpp
bolt/dwio/paimon/deletionvectors/tests/: DeletionFileReaderTest.cpp
bolt/dwio/paimon/reader/tests/: PaimonReaderAggregateTest.cpp  PaimonReaderDeduplicateTest.cpp  PaimonReaderMetadataFieldTest.cpp  PaimonReaderPartialUpdateTest.cpp
bolt/dwio/parquet/tests/: ParquetTpchTest.cpp
bolt/dwio/parquet/tests/reader/: ParquetTableScanTest.cpp
bolt/dwio/parquet/tests/writer/: ParquetWriterTest.cpp
bolt/examples/: ScanAndSort.cpp
bolt/exec/: Driver.cpp  Spill.cpp  Spill.h  SpillFile.cpp  SpillFile.h  Spiller.cpp  Spiller.h
bolt/exec/fuzzer/: AggregationFuzzerBase.h
bolt/exec/tests/: AggregationTest.cpp  BoltIn10MinDemo.cpp  HashJoinBridgeTest.cpp  JoinFuzzer.cpp  OrderByTest.cpp  SpillTest.cpp
bolt/exec/tests/utils/: HiveConnectorTestBase.cpp
bolt/functions/lib/aggregates/tests/utils/: AggregationTestBase.cpp
bolt/serializers/: ArrowSerializer.cpp  ArrowSerializer.h  CMakeLists.txt  PrestoSerializer.cpp  PrestoSerializer.h
bolt/serializers/tests/: ArrowSerializerBenchmark.cpp  ArrowSerializerTest.cpp  CMakeLists.txt
bolt/tool/trace/: TraceReplayRunner.cpp
bolt/vector/: VectorStream.cpp  VectorStream.h
bolt/vector/arrow/: Bridge.cpp  Bridge.h  CMakeLists.txt
scripts/: setup-dev-env.sh
